--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   padding: 0;
   z-index: 1000;
+  background-color: #F9F9F9;
   transition: background-color 0.3s ease;
 
   &.scrolled {
